# bazel-example

./: BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  go.mod  go.sum  package.json
backend/: BUILD.bazel  main.go
backend/assets/: BUILD.bazel
backend/lib/: BUILD.bazel  library.go
frontend/: BUILD.bazel  main.tsx  rollup.config.js
frontend/devserver/: BUILD.bazel  README.md  index.html
