load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "backend",
    embed = [":go_default_library"],
    importpath = "github.com/ccontavalli/bazel-example/backend",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ccontavalli/bazel-example/backend",
    visibility = ["//visibility:private"],
    deps = ["//backend/lib"],
)
