package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

# When bazel is invoked with 'bazel build directoryname' without specifying 
# any target, it looks for the target 'directoryname', as if it was invoked
# like 'bazel build directoryname:directoryname'.
#
# This alias causes the 'release' target to be built when no target is explicitly
# specified by the user.
alias(name = "frontend", actual = ":release")

ts_library(
    name = "main",
    srcs = ["main.tsx"],
    deps = [
       "@npm//react",
       "@npm//react-dom",
    ]
)

# Generates the file dist/bin/frontend/release.js by running rollupjs
# on all the specified dependencies, with the rollup.config.js
# configuration file.
rollup_bundle(
    name = "release",
    deps = [":main"],
    config_file = "rollup.config.js",
    entry_point = "main.tsx",
)
